--- a/generator.html
+++ b/generator.html
@@ -687,7 +687,7 @@
         var menu = $("builderMenu");
         var container = $("starbaseContainer");
         var newMenu = menu.cloneNode(true);
-        var newTop = el.offsetTop;
+        var newTop = el.offsetTop + 20;
         var newLeft = el.offsetLeft + 30;
         newMenu.style.top = newTop + "px";
         newMenu.style.left = newLeft + "px";
@@ -1189,4 +1189,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.292--->
+<!--Version 0.293--->
