--- a/generator.html
+++ b/generator.html
@@ -1159,7 +1159,7 @@
         var e2PlanetName2 = $("e2PlanetName2");
         var event2Target = planetElList[2];
         var event2Randomizer = Number(Math.floor(Math.random() * 35) + 1);
-        if (event2Target !== undefined && event2Randomizer == "1" && habitablePlanets.includes(event2Target.biome)) {
+        if (event2 !== undefined && event2Target !== undefined && event2Randomizer == "1" && habitablePlanets.includes(event2Target.biome)) {
           event2.style.display = "inline-grid";
           e2PlanetName.innerText = event2Target.randomName;
           e2PlanetName2.innerText = event2Target.randomName;
