--- a/generator.html
+++ b/generator.html
@@ -720,9 +720,9 @@
           var container = $("starbaseContainer");
           currentShipNumber = Number(currentShipNumber) + 1;
           starbase.dataset.ships = currentShipNumber;
-          console.log(currentShipNumber);
+          console.log(currentShipNumber + " corvette");
           var newTop = starbase.offsetTop;
-          var newLeft = starbase.offsetLeft + 30 + 25 * currentShipNumber;
+          var newLeft = starbase.offsetLeft + 20 + 35 * currentShipNumber;
           newCorvette.style.top = newTop + "px";
           newCorvette.style.left = newLeft + "px";
           newCorvette.style.height = "24px";
@@ -751,7 +751,7 @@
           starbase.dataset.ships = currentShipNumber;
           console.log(currentShipNumber + " cruiser");
           var newTop = starbase.offsetTop;
-          var newLeft = starbase.offsetLeft + 30 + 25 * currentShipNumber;
+          var newLeft = starbase.offsetLeft + 20 + 35 * currentShipNumber;
           newCruiser.style.top = newTop + "px";
           newCruiser.style.left = newLeft + "px";
           newCruiser.style.height = "24px";
@@ -780,7 +780,7 @@
           starbase.dataset.ships = currentShipNumber;
           console.log(currentShipNumber + " destroyer");
           var newTop = starbase.offsetTop;
-          var newLeft = starbase.offsetLeft + 30 + 25 * currentShipNumber;
+          var newLeft = starbase.offsetLeft + 20 + 35 * currentShipNumber;
           newDestroyer.style.top = newTop + "px";
           newDestroyer.style.left = newLeft + "px";
           newDestroyer.style.height = "24px";
@@ -811,7 +811,7 @@
           starbase.dataset.ships = currentShipNumber;
           console.log(currentShipNumber + " dreadnaught");
           var newTop = starbase.offsetTop;
-          var newLeft = starbase.offsetLeft + 30 + 25 * currentShipNumber;
+          var newLeft = starbase.offsetLeft + 20 + 35 * currentShipNumber;
           newDreadnaught.style.top = newTop + "px";
           newDreadnaught.style.left = newLeft + "px";
           newDreadnaught.style.height = "24px";
@@ -842,7 +842,7 @@
           starbase.dataset.ships = currentShipNumber;
           console.log(currentShipNumber + " titan");
           var newTop = starbase.offsetTop;
-          var newLeft = starbase.offsetLeft + 30 + 25 * currentShipNumber;
+          var newLeft = starbase.offsetLeft + 20 + 35 * currentShipNumber;
           newTitan.style.top = newTop + "px";
           newTitan.style.left = newLeft + "px";
           newTitan.style.height = "24px";
@@ -1188,4 +1188,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.295--->
+<!--Version 0.296--->
