--- a/generator.html
+++ b/generator.html
@@ -247,6 +247,7 @@
       .EAcell span { font-family: 'MedievalSharp', cursive; font-size:110%; }
       .EAname { grid-area:EAname; text-align:center; margin-top:10px; }
       .EAname span { white-space:nowrap; font-size:200%; }
+      .EAname i { font-family: 'MedievalSharp', cursive; font-size:200%; }
       .EAdesc { grid-area:EAdesc; text-align:center; padding:20px; }
       .EAbutton { grid-area:EAbutton; }
       #E1button { border-radius:10%; background:slateblue; color:white; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
@@ -1232,4 +1233,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.297--->
+<!--Version 0.298--->
