--- a/generator.html
+++ b/generator.html
@@ -259,7 +259,8 @@
       #event2 { top:200px; left:450px; }
       #event2 .EAdesc { font-size:80%; }
       #event3 { top:200px; left:450px; }
-      #event4
+      #event4 { top:200px; left:450px; }
+      #event4 .EAdesc { font-size:80%; }
       
     </style>
     
