--- a/generator.html
+++ b/generator.html
@@ -263,7 +263,7 @@
       #event4 { top:200px; left:450px; }
       #event4 .EAdesc { font-size:80%; }
       #event5 { top:200px; left:450px; }
-      #event5 .EAdesc { font-size:80%; }
+      #event5 .EAdesc { font-size:90%; }
       
     </style>
     
@@ -421,9 +421,9 @@
     <div class="eventA" id="event5" onclick="moveEvent(this)">
       <div class="Eacell EAname"><span> A Rogue Planet </span></div>
       <div class="Eacell EAdesc">
-      <span> A civilian ship hailing from </span><span id="e5PlanetName"> [planetName] </span><span> was passing between systems when it noticed something.</span>
-      <span> The onboard scientists realized there was a rogue planet, one hurled out of its system by a passing star, was sailing by. </span>
-      <span> The planet may have once supported life, but had frozen over long since leaving its home system. However, it is rich in resources. </span></div>
+      <span> A civilian ship hailing from </span><span id="e5PlanetName"> [planetName] </span><span> was passing between systems when it noticed something. </span>
+      <span> The onboard scientists realized it was a rogue planet, one hurled out of its system by the gravitational force of a star. </span>
+      <span> The planet may have once supported life, but had frozen over long since leaving its home system. However, it is still rich in resources. </span></div>
       <div class="EAcell EAbutton"><button id="E5button" onclick="executeEvent5()"> Salvage it. </button></div>
     </div>
 
@@ -1287,4 +1287,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.302--->
+<!--Version 0.303--->
