--- a/generator.html
+++ b/generator.html
@@ -91,8 +91,8 @@
       #HUDAuthorityIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       #HUDSupplyIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       
-      .pointContainer { position:fixed; top:10px; left:1200px; width:60px; height:30px; font-family: 'MedievalSharp', cursive;
-        font-size:80%; display:block; background: #1d4b96; }
+      .pointContainer { position:fixed; top:22px; left:1200px; width:60px; height:10px; font-family: 'MedievalSharp', cursive;
+        font-size:90%; display:block; background: #1d4b96; text-align:center; }
       
       .planetMenu { position:absolute; top:20px; left:20px; width: 180px; height: 140px; font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: none; margin: 15px;
@@ -1303,4 +1303,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.305--->
+<!--Version 0.306--->
